--- a/app/src/main/res/layout/activity_help_content.xml
+++ b/app/src/main/res/layout/activity_help_content.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -79,7 +80,14 @@
 
     </LinearLayout>
 
-    <android.support.v7.widget.RecyclerView
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@id/help_content_title"
+        android:layout_above="@id/help_content_button_layout">
+
+        <android.support.v7.widget.RecyclerView
         android:id="@+id/help_content_recycler_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -87,5 +95,7 @@
         android:layout_above="@id/help_content_button_layout"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
+
+    </LinearLayout>
 
 </RelativeLayout>
