--- a/app/src/main/res/layout/activity_message.xml
+++ b/app/src/main/res/layout/activity_message.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -26,11 +26,41 @@
             android:layout_gravity="center"
             android:text="消息"
             android:textColor="#fff"
-            android:textSize="24sp"/>
+            android:textSize="24sp"
+            android:id="@+id/message_chatter" />
 
     </FrameLayout>
 
     <LinearLayout
+        android:layout_alignParentBottom="true"
+        android:id="@+id/message_bottom_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="#4000"
+        android:orientation="horizontal">
+
+        <EditText
+            android:id="@+id/message_message"
+            android:layout_width="0dp"
+            android:layout_weight="4"
+            android:textSize="24sp"
+            android:layout_height="wrap_content"
+            android:theme="@style/MyEditText"/>
+
+        <Button
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="发送"
+            android:textColor="#fff"
+            android:textSize="24sp"
+            android:background="#2000"/>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_below="@id/message_top_layout"
+        android:layout_above="@id/message_bottom_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -41,4 +71,4 @@
 
     </LinearLayout>
 
-</LinearLayout>
+</RelativeLayout>
