--- a/app/src/main/res/layout/help_item.xml
+++ b/app/src/main/res/layout/help_item.xml
@@ -15,7 +15,7 @@
             android:id="@+id/help_item_asker_image"
             android:layout_width="40dp"
             android:layout_height="40dp"
-            android:src="@drawable/icon_image"
+            android:src="@drawable/ask"
             app:civ_border_color="#fff"
             app:civ_border_width="2dp"/>
 
