--- a/app/src/main/res/layout/activity_message.xml
+++ b/app/src/main/res/layout/activity_message.xml
@@ -48,6 +48,7 @@
             android:theme="@style/MyEditText"/>
 
         <Button
+            android:id="@+id/message_send"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
