--- a/app/src/main/res/layout/activity_help_content.xml
+++ b/app/src/main/res/layout/activity_help_content.xml
@@ -98,4 +98,9 @@
 
     </LinearLayout>
 
+    <ImageView
+        android:id="@+id/help_content_imageview"
+        android:layout_width="1dp"
+        android:layout_height="1dp" />
+
 </RelativeLayout>
