--- a/app/src/main/res/layout/activity_talk.xml
+++ b/app/src/main/res/layout/activity_talk.xml
@@ -26,7 +26,7 @@
             android:textSize="24sp"
             android:gravity="center"
             android:layout_gravity="center"
-            />
+            android:id="@+id/textView" />
 
     </FrameLayout>
 
